--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Death Diaries – A Blog About Losing in Games</title>
+    <meta name="title" content="Death Diaries – A Blog About Losing in Games">
+    <meta name="description"
+      content="Death Diaries is a gaming blog that celebrates defeat, failure, and game-over moments through reflective, humorous, and emotional stories. Discover tales of tragic permadeaths, bad endings, and unforgettable losses across all genres.">
+    <meta name="keywords"
+      content="gaming blog, game over stories, video game deaths, bad endings, permadeath, losing in games, gaming failure, rogue-like losses, narrative gaming, death in games, emotional game stories, Death Diaries">
+    <meta name="author" content="Death Diaries Editorial Team">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
+    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
+    <load src="./partials/header.html"/>
 
     <main>
       <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
+       <load src="./partials/main.html" />
     </main>
 
     <load src="./partials/footer.html" />
