--- a/src/cookies.html
+++ b/src/cookies.html
@@ -26,8 +26,124 @@
 <body>
     <load src="./partials/header.html" />
 
-    <main>
-        <div class="container">
+    <main class="background-policy">
+        <div class="container policy-container">
+            <h2 class="privacy-title">Cookies Policy</h2>
+            <div class="text-container">
+                <p>This Cookies Policy explains what Cookies are and how We use them. You should read this policy so You can
+                    understand
+                    what type of cookies We use, or the information We collect using Cookies and how that information is
+                    used.</p>
+                <p>Cookies do not typically contain any information that personally identifies a user, but personal
+                    information that we
+                    store about You may be linked to the information stored in and obtained from Cookies. For further
+                    information on how We
+                    use, store and keep your personal data secure, see our Privacy Policy.</p>
+                <p>We do not store sensitive personal information, such as mailing addresses, account passwords, etc. in the
+                    Cookies We
+                    use.</p>
+            </div>
+            <h3 class="policy-subtitle">Interpretation and Definitions</h3>
+            <h3 class="policy-subtitle">Interpretation</h3>
+            <p>The words of which the initial letter is capitalized have meanings defined under the following conditions.
+                The following
+                definitions shall have the same meaning regardless of whether they appear in singular or in plural.</p>
+            <h3 class="policy-subtitle">Definitions</h3>
+            <p class="text">For the purposes of this Cookies Policy:
+            </p>
+            <ul class="policy-list">
+                <li><span class="text-span">Company </span>(referred to as either "the Company", "We", "Us" or "Our" in
+                    this Agreement) refers to Death Diaries.</li>
+                <li><span class="text-span">Cookies </span>are small files that are placed on Your computer, mobile device
+                    or any other
+                    device by a website, containing the details
+                    of Your browsing history on that website among its many uses.</li>
+                <li><span class="text-span">Website </span>refers to Clicker Neli, accessible from <a class="mail-link"
+                        href="https://adventurelose.site/">adventurelose.site</a></li>
+                <li><span class="text-span">You </span>means the individual accessing or using the Service, or the
+                    company, or other legal entity on behalf of which such
+                    individual is accessing or using the Service, as applicable.
+                </li>
+            </ul>
+            <h3 class="policy-subtitle">The use of the Cookies</h3>
+            <h3 class="policy-subtitle">Type of Cookies We Use</h3>
+            <p class="text">Cookies can be "Persistent" or "Session" Cookies. Persistent Cookies remain on Your personal
+                computer or
+                mobile device
+                when You go offline, while Session Cookies are deleted as soon as You close Your web browser.</p>
+            <p class="text">We use both Session and Persistent Cookies for the purposes set out below:</p>
+            <ul class="policy-list">
+                <li class="text">
+                    <p class="text-span">Necessary / Essential Cookies</p>
+                    <p>Type: Session Cookies</p>
+                    <p>Administered by: Us</p>
+                    <p>Purpose: These Cookies are essential to provide You with services available through the
+                        Website
+                        and to enable You to use
+                        some of its features. They help to authenticate users and prevent fraudulent use of user accounts.
+                        Without
+                        these
+                        Cookies, the services that You have asked for cannot be provided, and We only use these Cookies to
+                        provide
+                        You with
+                        those services.</p>
+                </li>
+                <li>
+                    <p class="text-span">Functionality Cookies</p>
+                    <p>Type: Persistent Cookies</p>
+                    <p>Administered by: Us</p>
+                    <p>Purpose: These Cookies allow us to remember choices You make when You use the Website,
+                        such as
+                        remembering your login
+                        details or language preference. The purpose of these Cookies is to provide You with a more personal
+                        experience and to
+                        avoid You having to re-enter your preferences every time You use the Website.</p>
+                </li>
+            </ul>
+            <p class="text">For more information about the cookies we use and your choices regarding cookies, please visit our Cookies Policy or the
+            Cookies section of our Privacy Policy.
+            </p>
+            <h3 class="policy-subtitle">Your Choices Regarding Cookies</h3>
+            <div class="text-container text">
+                <p>If You prefer to avoid the use of Cookies on the Website, first You must disable the use of Cookies in
+                    your browser and
+                    then delete the Cookies saved in your browser associated with this website. You may use this option for
+                    preventing the
+                    use of Cookies at any time.</p>
+                <p>If You do not accept Our Cookies, You may experience some inconvenience in your use of the Website and
+                    some features may
+                    not function properly.</p>
+                <p>If You'd like to delete Cookies or instruct your web browser to delete or refuse Cookies, please visit
+                    the help pages of
+                    your web browser.</p>
+            </div>
+            <ul class="policy-list ">
+                <li class="text">
+                    <p>For the Chrome web browser, please visit this page from Google: </p>
+                    <p class="underline">https://support.google.com/accounts/answer/32050 </p>
+                </li>
+                <li class="text">
+                    <p>For the Internet Explorer web browser, please visit this page from Microsoft: </p>
+                    <p class="underline">http://support.microsoft.com/kb/278835</p>
+                </li>
+                <li class="text">
+                    <p>For the Firefox web browser, please visit this page from Mozilla: </p>
+                    <p class="underline">https://support.mozilla.org/en-US/kb/delete-cookies-remove-info-websites-stored</p>
+                </li>
+                <li class="text">
+                    <p>For the Safari web browser, please visit this page from Apple: </p>
+                    <p class="underline">
+                        https://support.apple.com/guide/safari/manage-cookies-and-website-data-sfri11471/mac</p>
+                </li>
+            </ul>
+            <p class="text">For any other web browser, please visit your web browser's official web pages.</p>
+            <h3 class="policy-subtitle">More Information about Cookies</h3>
+            <p class="text">You can learn more about cookies: <a class="underline"
+                    href="https://www.freeprivacypolicy.com/blog/cookies/">Cookies: What Do They Do?.</a> </p>
+            <p>This cookies policy is effective as of <br class="policy-desk" /> 2025-06-03</p>
+            <h3 class="policy-subtitle">Contact Us</h3>
+            <p>If you have any questions about this Cookies Policy, You can contact us by email: <a
+                    href="mailto: info@adventurelose.site">info@adventurelose.site.</a> </p>
         </div>
     </main>
 
