--- a/src/terms.html
+++ b/src/terms.html
@@ -224,7 +224,7 @@
                 <p>These terms and conditions are effective as of 2025-06-03</p>
             </div>
             <h3 class="policy-subtitle">Contact Us</h3>
-            <p>If you have any questions about these Terms and Conditions, You can contact us by email: <a class="mail-link"
+            <p>If you have any questions about these Terms and Conditions, You can contact us by email: <a
                     href="mailto:info@adventurelose.site">info@adventurelose.site.</a> </p>
         </div>
     </main>
